<resources>
    <plurals name="delete_error">
        <item quantity="one">Unable to delete %d tunnel: %s</item>
        <item quantity="other">Unable to delete %d tunnels: %s</item>
    </plurals>
    <plurals name="delete_success">
        <item quantity="one">Successfully deleted %d tunnel</item>
        <item quantity="other">Successfully deleted %d tunnels</item>
    </plurals>
    <plurals name="delete_title">
        <item quantity="one">%d tunnel selected</item>
        <item quantity="other">%d tunnels selected</item>
    </plurals>
    <plurals name="import_partial_success">
        <item quantity="one">Imported %d of %d tunnels</item>
        <item quantity="other">Imported %d of %d tunnels</item>
    </plurals>
    <plurals name="import_total_success">
        <item quantity="one">Imported %d tunnel</item>
        <item quantity="other">Imported %d tunnels</item>
    </plurals>
    <plurals name="set_excluded_applications">
        <item quantity="one">%d Excluded Application</item>
        <item quantity="other">%d Excluded Applications</item>
    </plurals>
    <string name="add_peer">Add peer</string>
    <string name="addresses">Addresses</string>
    <string name="allowed_ips">Allowed IPs</string>
    <string name="app_name">WireGuard</string>
    <string name="bad_config_context">%1$s\'s %2$s</string>
    <string name="bad_config_context_top_level">%s</string>
    <string name="bad_config_error">%1$s in %2$s</string>
    <string name="bad_config_explanation_pka">: Must be positive and no more than 65535</string>
    <string name="bad_config_explanation_positive_number">: Must be positive</string>
    <string name="bad_config_explanation_udp_port">: Must be a valid UDP port number</string>
    <string name="bad_config_reason_invalid_key">Invalid key</string>
    <string name="bad_config_reason_invalid_number">Invalid number</string>
    <string name="bad_config_reason_invalid_value">Invalid value</string>
    <string name="bad_config_reason_missing_attribute">Missing attribute</string>
    <string name="bad_config_reason_missing_section">Missing section</string>
    <string name="bad_config_reason_missing_value">Missing value</string>
    <string name="bad_config_reason_syntax_error">Syntax error</string>
    <string name="bad_config_reason_unknown_attribute">Unknown attribute</string>
    <string name="bad_config_reason_unknown_section">Unknown section</string>
    <string name="bad_config_reason_value_out_of_range">Value out of range</string>
    <string name="bad_extension_error">File must be .conf or .zip</string>
    <string name="cancel">Cancel</string>
    <string name="config_delete_error">Cannot delete configuration file %s</string>
    <string name="config_exists_error">Configuration for “%s” already exists</string>
    <string name="config_file_exists_error">Configuration file “%s” already exists</string>
    <string name="config_not_found_error">Configuration file “%s” not found</string>
    <string name="config_rename_error">Cannot rename configuration file “%s”</string>
    <string name="config_save_error">Cannot save configuration for “%1$s”: %2$s</string>
    <string name="config_save_success">Successfully saved configuration for “%s”</string>
    <string name="create_activity_title">Create WireGuard Tunnel</string>
    <string name="create_bin_dir_error">Cannot create local binary directory</string>
    <string name="create_empty">Create from scratch</string>
    <string name="create_from_file">Create from file or archive</string>
    <string name="create_from_qr_code">Create from QR code</string>
    <string name="create_output_dir_error">Cannot create output directory</string>
    <string name="create_downloads_file_error">Cannot create file in downloads directory</string>
    <string name="create_temp_dir_error">Cannot create local temporary directory</string>
    <string name="create_tunnel">Create Tunnel</string>
    <string name="dark_theme_summary_off">Currently using light (day) theme</string>
    <string name="dark_theme_summary_on">Currently using dark (night) theme</string>
    <string name="dark_theme_title">Use dark theme</string>
    <string name="delete">Delete</string>
    <string name="toggle_all">Toggle All</string>
    <string name="dns_servers">DNS servers</string>
    <string name="edit">Edit</string>
    <string name="endpoint">Endpoint</string>
    <string name="error_down">Error bringing down tunnel: %s</string>
    <string name="error_fetching_apps">Error fetching apps list: %s</string>
    <string name="error_root">Please obtain root access and try again</string>
    <string name="error_up">Error bringing up tunnel: %s</string>
    <string name="exclude_private_ips">Exclude private IPs</string>
    <string name="excluded_applications">Excluded Applications</string>
    <string name="generate">Generate</string>
    <string name="generic_error">Unknown “%s” error</string>
    <string name="hint_automatic">(auto)</string>
    <string name="hint_generated">(generated)</string>
    <string name="hint_optional">(optional)</string>
    <string name="hint_random">(random)</string>
    <string name="illegal_filename_error">Illegal file name “%s”</string>
    <string name="import_error">Unable to import tunnel: %s</string>
    <string name="import_from_qr_code">Import Tunnel from QR Code</string>
    <string name="import_success">Imported “%s”</string>
    <string name="interface_title">Interface</string>
    <string name="key_length_explanation_base64">: WireGuard base64 keys must be 44 characters (32 bytes)</string>
    <string name="key_length_explanation_binary">: WireGuard keys must be 32 bytes</string>
    <string name="key_length_explanation_hex">: WireGuard hex keys must be 64 characters (32 bytes)</string>
    <string name="listen_port">Listen port</string>
    <string name="log_export_error">Unable to export log: %s</string>
    <string name="log_export_success">Saved to “%s”</string>
    <string name="log_export_summary">Log file will be saved to downloads folder</string>
    <string name="log_export_title">Export log file</string>
    <string name="logcat_error">Unable to run logcat: </string>
    <string name="module_version_error">Unable to determine kernel module version</string>
    <string name="module_installer_not_found">No modules are available for your device</string>
    <string name="module_installer_initial">The experimental kernel module can improve performance</string>
    <string name="module_installer_success">Success. The application will restart in 5 seconds</string>
    <string name="module_installer_title">Download and install kernel module</string>
    <string name="module_installer_working">Downloading and installing…</string>
    <string name="module_installer_error">Something went wrong. Please try again</string>
    <string name="mtu">MTU</string>
    <string name="multiple_tunnels_error">Only one userspace tunnel can run at a time</string>
    <string name="name">Name</string>
    <string name="no_config_error">Trying to bring up a tunnel with no config</string>
    <string name="no_configs_error">No configurations found</string>
    <string name="no_tunnels_error">No tunnels exist</string>
    <string name="parse_error_generic">string</string>
    <string name="parse_error_inet_address">IP address</string>
    <string name="parse_error_inet_endpoint">endpoint</string>
    <string name="parse_error_inet_network">IP network</string>
    <string name="parse_error_integer">number</string>
    <string name="parse_error_reason">Cannot parse %1$s “%2$s”</string>
    <string name="peer">Peer</string>
    <string name="permission_description">Allows an app to control WireGuard tunnels. Apps with this permission may enable and disable WireGuard tunnels at will, potentially misdirecting Internet traffic.</string>
    <string name="permission_label">control WireGuard tunnels</string>
    <string name="persistent_keepalive">Persistent keepalive</string>
    <string name="pre_shared_key">Pre-shared key</string>
    <string name="private_key">Private key</string>
    <string name="public_key">Public key</string>
    <string name="public_key_description">Public key</string>
    <string name="qr_code_hint">Tip: generate with `qrencode -t ansiutf8 &lt; tunnel.conf`.</string>
    <string name="restore_on_boot_summary">Bring up previously-enabled tunnels on boot</string>
    <string name="restore_on_boot_title">Restore on boot</string>
    <string name="save">Save</string>
    <string name="select_all">Select all</string>
    <string name="set_exclusions">Set Exclusions</string>
    <string name="settings">Settings</string>
    <string name="shell_exit_status_read_error">Shell cannot read exit status</string>
    <string name="shell_marker_count_error">Shell expected 4 markers, received %d</string>
    <string name="shell_start_error">Shell failed to start: %d</string>
    <string name="toggle_error">Error toggling WireGuard tunnel: %s</string>
    <string name="tools_installer_already">wg and wg-quick are already installed</string>
    <string name="tools_installer_failure">Unable to install command-line tools (no root?)</string>
    <string name="tools_installer_initial">Install optional tools for scripting</string>
    <string name="tools_installer_initial_magisk">Install optional tools for scripting as Magisk module</string>
    <string name="tools_installer_initial_system">Install optional tools for scripting into the system partition</string>
    <string name="tools_installer_success_magisk">wg and wg-quick installed as a Magisk module (reboot required)</string>
    <string name="tools_installer_success_system">wg and wg-quick installed into the system partition</string>
    <string name="tools_installer_title">Install command line tools</string>
    <string name="tools_installer_working">Installing wg and wg-quick</string>
    <string name="tools_unavailable_error">Required tools unavailable</string>
    <string name="transfer">Transfer</string>
    <string name="transfer_rx_tx">rx: %1$s, tx: %2$s</string>
    <string name="transfer_bytes">%d B</string>
    <string name="transfer_kibibytes">%.2f KiB</string>
    <string name="transfer_mibibytes">%.2f MiB</string>
    <string name="transfer_gibibytes">%.2f GiB</string>
    <string name="transfer_tibibytes">%.2f TiB</string>
    <string name="tun_create_error">Unable to create tun device</string>
    <string name="tunnel_config_error">Unable to configure tunnel (wg-quick returned %d)</string>
    <string name="tunnel_create_error">Unable to create tunnel: %s</string>
    <string name="tunnel_create_success">Successfully created tunnel “%s”</string>
    <string name="tunnel_error_already_exists">Tunnel “%s” already exists</string>
    <string name="tunnel_error_invalid_name">Invalid name</string>
    <string name="tunnel_list_placeholder">Add a tunnel using the blue button</string>
    <string name="tunnel_name">Tunnel Name</string>
    <string name="tunnel_on_error">Unable to turn tunnel on (wgTurnOn returned %d)</string>
    <string name="tunnel_rename_error">Unable to rename tunnel: %s</string>
    <string name="tunnel_rename_success">Successfully renamed tunnel to “%s”</string>
    <string name="type_name_go_userspace">Go userspace</string>
    <string name="type_name_kernel_module">Kernel module</string>
    <string name="unknown_error">Unknown error</string>
    <string name="version_summary">%1$s backend v%2$s</string>
    <string name="version_summary_checking">Checking %s backend version</string>
    <string name="version_summary_unknown">Unknown %s version</string>
    <string name="version_title">WireGuard for Android v%s</string>
    <string name="vpn_not_authorized_error">VPN service not authorized by user</string>
    <string name="vpn_start_error">Unable to start Android VPN service</string>
    <string name="zip_export_error">Unable to export tunnels: %s</string>
</resources>