<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="restore_on_boot"
        android:summary="@string/restore_on_boot_summary"
        android:title="@string/restore_on_boot_title" />
    <com.wireguard.android.preference.ToolsInstallerPreference android:key="tools_installer" />
    <com.wireguard.android.preference.ZipExporterPreference android:key="zip_exporter" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="dark_theme"
        android:summaryOn="@string/dark_theme_summary_on"
        android:summaryOff="@string/dark_theme_summary_off"
        android:title="@string/dark_theme_title" />
</PreferenceScreen>
