<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.wireguard.android.util.ClipboardUtils" />

        <variable
            name="item"
            type="com.wireguard.config.Peer" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="?android:attr/colorBackground"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        app:contentPadding="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/peer_title"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/peer" />

            <TextView
                android:id="@+id/public_key_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/peer_title"
                android:layout_marginTop="8dp"
                android:labelFor="@+id/public_key_text"
                android:text="@string/public_key" />

            <TextView
                android:id="@+id/public_key_text"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/public_key_label"
                android:contentDescription="@string/public_key_description"
                android:ellipsize="end"
                android:maxLines="1"
                android:onClick="@{ClipboardUtils::copyTextView}"
                android:text="@{item.publicKey.toBase64}" />

            <TextView
                android:id="@+id/allowed_ips_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/public_key_text"
                android:layout_marginTop="8dp"
                android:labelFor="@+id/allowed_ips_text"
                android:text="@string/allowed_ips" />

            <TextView
                android:id="@+id/allowed_ips_text"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/allowed_ips_label"
                android:text="@{item.allowedIps}" />

            <TextView
                android:id="@+id/endpoint_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/allowed_ips_text"
                android:layout_marginTop="8dp"
                android:labelFor="@+id/endpoint_text"
                android:text="@string/endpoint" />

            <TextView
                android:id="@+id/endpoint_text"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/endpoint_label"
                android:text="@{item.endpoint}" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</layout>
